Items spacing fix Customize

--- a/src/_common/items/items.scss
+++ b/src/_common/items/items.scss
@@ -56,11 +56,11 @@
 		}
 
 		&.lg {
-			width: 110px;
+			width: 120px;
 		}
 
 		&.xl {
-			width: 130px;
+			width: 140px;
 		}
 	}
 
